crates/strider/tests/snapshots/v3__mips64be__floats__f64_to_f32.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nf12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xffffffff00000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nv0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
